# Engineering-Workbench

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  development-roadmap.md  information-architecture.md  product-requirements.md  vision.md
engineering_workbench/: __init__.py
engineering_workbench/core/: __init__.py  _common.py  knowledge.py  module.py  project.py  resource.py  tool.py  workspace.py
engineering_workbench/services/: __init__.py  knowledge_service.py  project_service.py  resource_service.py  search_service.py  workspace_service.py
tests/: test_engineering_kernel.py  test_platform_services.py
